# jsonclass

./: README.md  build.sh  pyproject.toml  test.sh  test_upload.sh
src/: jsonclass.py
src/jsonclass/: __init__.py  dumps.py  jsonclass.py  loads.py
tests/: test.py
