[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jsonclass"
version = "0.0.5"
authors = [
  { name="soundagain2", email="soundagain2@proton.me" },
]
description = "Convert json to object and back in Python."
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.urls]
"Homepage" = "https://github.com/soundagain2/jsonclass"
"Bug Tracker" = "https://github.com/soundagain2/jsonclass/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/jsonclass.py"]
